bin/testsuite/tests/compiler/src/errors/compiler3331.swg
#global testerror "Err0063"
struct ST
{
    x:   ST
}

/*struct ST1
{
    x: ST
}
*/
